finish edit of blog

--- a/styles/global.css
+++ b/styles/global.css
@@ -15,11 +15,17 @@ body {
     Droid Sans,
     Helvetica Neue,
     sans-serif;
+  font-size: 18px;
+  line-height: 1.6;
 }
 
 a {
-  color: inherit;
+  color: #0070f3;
   text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 * {
@@ -29,4 +35,5 @@ a {
 img {
   max-width: 100%;
   height: auto;
+  display: block;
 }
